[package]
name = "yarrs"
version = "0.1.0"
edition = "2021"

[lib]
src = "src/lib.rs"

[[bin]]
name = "yarrs"
src = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
atoi = "2.0.0"
bytes = "1.10.0"
redis = {version = "0.31.0", features = ["tokio-comp", "disable-client-setinfo"] }
thiserror = "2.0.11"
tokio = { version = "1", features = ["rt", "macros", "net"] }

[dev-dependencies]
rstest = "0.24.0"
